--- a/css/main.css
+++ b/css/main.css
@@ -24,3 +24,27 @@ nav a {
 nav a:hover {
 	color: #ccc
 }
+
+body {
+	min-height: 100vh;
+}
+
+.footer {
+	background-color: #f5f5f5;
+	width: 100%;
+	transition: .5s;
+}
+
+.footer:hover {
+	background-color: #f0f0f0;
+}
+
+.footer a {
+	color: #666;
+	text-decoration: underline;
+}
+
+.footer a:hover {
+	color: #333;
+	text-decoration: none;
+}
